@@ -3,6 +3,9 @@ KNOWN BUGS:
 |
 Changes since 20081120a:
 - Documentation: Improved the rnews(8) manual page.
+- Change: when logging authentication trouble, don't use
+  username@servername format but rather server: username "username", to
+  make output less irritating. (Related support request by Gianni Piccini.)
 
 20081120a: Changes since 20081110a:
 - Default: the default spool directory is now /var/spool/leafnode.
